--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Application to help Magneto find new mutants based on DNA sequence.",
   "main": "index.js",
   "scripts": {
-    "start": "node bin/index.js"
+    "start": "node lib/mutants.js"
   },
   "repository": {
     "type": "git",
