[TEST] Adding datastore capabilities

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Application to help Magneto find new mutants based on DNA sequence.",
   "main": "index.js",
   "scripts": {
-    "start": "node lib/mutants.js"
+    "start": "node lib/mutants.js",
+    "deploy": "gcloud app deploy"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,7 @@
   },
   "homepage": "https://github.com/martin919191/mutants#readme",
   "dependencies": {
+    "@google-cloud/datastore": "^6.3.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "request": "^2.88.2"
