--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/martin919191/mutants#readme",
   "dependencies": {
-    "@google-cloud/datastore": "^6.3.0",
+    "@google-cloud/bigquery": "^5.5.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "request": "^2.88.2"
