--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@google-cloud/bigquery": "^5.5.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "sqlite": "^4.0.17",
+    "sqlite3": "^5.0.0"
   }
 }
